--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,12 @@
 
 <head>
   <title>Aircall</title>
-
   <meta charset="utf-8">
   <meta property="description" name="description" content="">
+  <meta
+  name="viewport"
+  content="minimum-scale=1, initial-scale=1, width=device-width"
+/>
 </head>
 
 <body>
